--- a/src/Components/Headersection/Navbar/Navbar.css
+++ b/src/Components/Headersection/Navbar/Navbar.css
@@ -5,6 +5,10 @@
     line-height: 45px;
     letter-spacing: 0em;
     color: rgba(0, 0, 0, 0.8); 
+    
+}
+.logol{
+    text-decoration: none;
 }
 .icons{
     width: 30px;
@@ -21,6 +25,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 64px;
+    position:static;
 }
 .search-area{
     width: 400px;
@@ -46,5 +51,5 @@
     background-color: white;
 }
 .search-btn:hover{
-    background-color: hwb(202 63% 29%);
+    background-color: #a1aeb5;
 }
