--- a/src/Components/Headersection/card/Card.css
+++ b/src/Components/Headersection/card/Card.css
@@ -149,6 +149,25 @@
     font-size: 14px;
 
 }
+.shoppingcart{
+    font-size: 20px;
+    padding-left: 55px;
+    margin-top: 17px;
+    color:  rgba(0, 0, 0, 0.7);
+}
+.shoppingcart:hover{
+    cursor: pointer;
+    color: black;
+    transform: scale(1.01);
+}
+.truly{
+    color: rgba(0, 0, 0, 0.7) ;
+    font-size: 20px;
+}
+.falsy{
+    color: green ;
+    font-size: 24px;
+}
 .card-img:hover{
     transform: scale(1.09);
 }
